# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
# $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/ChangeLog,v 1.8 2004/11/13 23:34:33 wolf31o2 Exp $

# This file serves as the official ChangeLog for Gentoo Linux 2004.3
# Each bugfix, enhancement, etc should be documented in this file
# The syntax used by 'echangelog' should suffice.

# PLEASE BE THOROUGH IN YOUR EXPLANATIONS!

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #61283.  2.5GHz G5 support was added to the ppc LiveCD.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #50978.  The rp-pppoe package was added to livecd-stage1 for ppc.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #62909.  Added ds21143 driver.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #61214. Added gcc and make to the 2004.3 ppc LiveCD (actually,
  just didn't remove them).

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #56513.  Added PReP support to LiveCD.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #49461.  Added de21041 driver to LiveCD.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #30734.  Added proper SCSI support for ppc.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #62707. A patched version of parted was added with proper HFS
  support.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #54894.  A G3 kernel was added to the ppc LiveCD.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #53135.  The lvm2 package was added to livecd-stage1.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #51949.  Support was added for non-Apple SATA controllers.

  13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Closing bug #49549. Special care was taken to add better support for