@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding="UTF-8"?>
-<!-- $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/2004.3.xml,v 1.10 2004/11/13 14:21:18 wolf31o2 Exp $ -->
+<!-- $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/2004.3.xml,v 1.11 2004/11/14 23:18:50 wolf31o2 Exp $ -->
 <?xml-stylesheet href="/xsl/guide.xsl" type="text/xsl"?>
 <!DOCTYPE guide SYSTEM "/dtd/guide.dtd">
 
@@ -11,6 +11,9 @@
   <mail link="zhen@gentoo.org">John Davis</mail>
 </author>
 
+<author title="Editor">
+  <mail link="wolf31o2@gentoo.org">Chris Gianelloni</mail>
+</author>
 
 <abstract>
 	This guide serves as the definitive source for all 2004.3 information.
@@ -18,8 +21,8 @@
 
 <license/>
 
-<version>1.1</version>
-<date>13 November 2004</date>
+<version>1.11</version>
+<date>15 November 2004</date>
 
 <chapter>
 	<title>Goals</title>
@@ -55,9 +58,21 @@
 	<section>
 		<title>Release Resources</title>
 		<body>
+			<p><b>Release Notes:</b></p>
+			<ul>
+				<li><uri link="http://amd64.gentoo.org/technotes.xml">AMD64 Release Notes</uri></li>
+				<li><uri link="/proj/en/releng/release/2004.3/ppc-release-notes.xml">PPC Release Notes</uri></li>
+				<li><uri link="/proj/en/releng/release/2004.3/x86-release-notes.xml">X86 Release Notes</uri></li>
+			</ul>
 
-		<p>Placeholder</p>
-		
+			<p>md5sums for all release media can be found on the mirrors.
+			Alternatively, a single text file containing all of the md5sums is
+	        also <uri link="/proj/en/releng/release/2004.3/2004.3-md5.txt">available</uri>.</p>
+
+			<p>All release media is signed by the <c>Gentoo Linux Release Engineering (releng@gentoo.org)</c>
+			 PGP key. The public key ID is <c>17072058</c>, and the key is available through the
+			 <c>pgp.mit.edu</c> keyserver.</p>
+
 		</body>
 	</section>
 		
@@ -106,7 +121,7 @@
 				<ti>2004.3 Release</ti>
 				<ti>2004.3 is publically released</ti>
 				<ti>November 15th</ti>
-				<ti>Pending</ti>
+				<ti>Completed</ti>
 			</tr>
 		</table>
 
