@@ -1,0 +1,259 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/ppc-release-notes.xml,v 1.1 2004/11/14 23:18:50 wolf31o2 Exp $ -->
+<!DOCTYPE guide SYSTEM "http://www.gentoo.org/dtd/guide.dtd">
+
+<guide link="x86-release-notes.xml">
+<title>ppc Release Notes for Gentoo Linux 2004.3</title>
+
+<author title="Author">
+ <mail link="zhen@gentoo.org">John Davis</mail>
+</author>
+
+<author title="ppc Release Coordinator">
+	<mail link="pvdabeel@gentoo.org">Pieter Van den Abeeles</mail>
+</author>
+
+<abstract>
+Gentoo 2004.3 Release Notes.
+</abstract>
+
+<license/>
+
+<version>1.0</version>
+<date>15 November 2004</date>
+
+<chapter>
+	<title>The Gentoo Linux Project</title>
+	<section>
+		<title>Overview</title>
+		<body>
+			<p>Gentoo Linux is a community driven project committed to producing
+			high quality opensource software. These release notes for Gentoo Linux 2004.3
+			summarize important package updates, security updates, and many other changes
+			that have happened since Gentoo Linux 2004.2</p>
+		</body>
+	</section>
+
+	<section>
+		<title>Table of Contents</title>
+		<body>
+		<ul>
+			<li>1. Overview</li>
+			<li>2. Important Changes</li>
+			<li>	2.1 Security Updates</li>
+			<li>	2.2 Errata</li>
+			<li>	2.3 Critical Package Updates</li>
+			<li>	2.4 Portage Updates</li>
+			<li>	2.5 Userland Updates</li>
+			<li>	2.6 Documentation Updates</li>
+			<li>3. Upgrading from previous versions of Gentoo Linux</li>
+		</ul>
+
+		</body>
+	</section>
+</chapter>
+
+<chapter>
+	<title>Important Changes for 2004.3</title>
+	<section>
+		<title>Security Updates</title>
+		<body>
+			<p>Gentoo Linux 2004.3 contains security updates to address GLSAs 
+			(Gentoo Linux Security Advisories) numbered 200407-13 to 200410-26.
+			</p>
+			
+			<p>Individual GLSAs can be referenced by going to
+			<c>http://www.gentoo.org/security/en/glsa/glsa-$x.xml</c>, and substituting <c>$x</c>
+			with the desired GLSA number. </p>
+			
+			<p>For more information, please consult the the 
+			<uri link="http://security.gentoo.org/">Gentoo Linux Security Project home page</uri>.</p>
+		</body>
+	</section>
+
+	<section>
+		<title>Errata</title>
+		<body>
+			<table>
+			<tr>
+				<th>Errata</th>
+				<th>Workaround</th>
+			</tr>
+			<tr>
+				<ti>Creating a RAID fails because of missing device nodes</ti>
+				<ti>Manually create the device nodes using <c>MAKEDEV md</c></ti>
+			</tr>
+			</table>
+			
+		</body>
+	</section>
+
+	<section>
+		<title>Critical Package Updates</title>
+		<body>
+			<p>Important package-versions in this release:</p>
+
+			<ul>
+				<li>gcc 3.4.1-r3</li>
+				<li>glibc 2.3.4-20040808</li>
+				<li>development-sources 2.6.9</li>
+				<li>gentoo-dev-sources 2.6.9-r1</li>
+				<li>gentoo-sources 2.4.26-r9</li>
+				<li>Portage 2.0.51-r2</li>
+				<li>x.org-x11 6.8.0-r1</li>
+				<li>KDE 3.3.0</li>
+				<li>GNOME 2.6.2-r1</li>
+				<li>XFCE4 4.0.6</li>
+			</ul>
+
+			<p>Coreutils is available in Version 5.2.1 with ACL patches. 
+			X.org-X11 is now the default XServer (current version is 6.8.0-r1).</p>
+
+			<p>With this release "cascading-profiles" are officially introduced. For more information about cascading-profiles
+			please read <uri link="http://www.gentoo.org/proj/en/releng/docs/cascading-profiles.xml">
+			http://www.gentoo.org/proj/en/releng/docs/cascading-profiles.xml</uri>. For information about how to change your
+			profile please read <uri link="http://www.gentoo.org/doc/en/gentoo-upgrading.xml">
+			http://www.gentoo.org/doc/en/gentoo-upgrading.xml</uri></p>
+			
+			<warn>Cascading profiles will only work with Portage >=2.0.51. Make sure to first upgrade to an appropriate version of Portage
+			and <b>then</b> upgrade your profile!</warn>
+			
+			
+		</body>
+	</section>
+
+	<section>
+		<title>Portage Updates</title>
+		<body>
+			<p>The Portage version included in this release is 2.0.51-r2 and
+			the <uri link="http://www.gentoo.org/cgi-bin/viewcvs.cgi/portage/ChangeLog?root=gentoo-src">ChangeLog</uri>
+			can be found via our online CVS repository.</p>
+		</body>
+	</section>
+
+	<section>
+		<title>Userland Updates</title>
+		<body>
+			<ul>
+				<li>Genkernel has been updated. Its behaviour is different
+				to previous versions in pre-2004.1 releases.</li>
+				<li>Gentoo Linux 2004.3 is fully compatible with Linux kernel 2.6.
+				To use kernel 2.6, just <c>emerge gentoo-dev-sources</c>. </li>
+				<li>Catalyst, the Gentoo Release Metatool, is stable in Portage as version
+				1.1.0. To use Catalyst, simply <c>emerge catalyst</c>. </li>
+				<li>The default XServer has changed from XFree86 to x.org's X-Server.
+				If you want to use the new server instead of the old XFree (which is unmaintained now)
+				simply emerge <c>xorg-x11</c> instead of <c>xfree</c></li>
+			</ul>
+		</body>
+	</section>
+
+	<section>
+		<title>Documentation Updates</title>
+		<body>
+			<p>
+			Much consideration and time has been spent on the Gentoo Installation Handbook in 
+			order to get it more in sync with Gentoo 2004.3. Please note that it is a constant 
+			work in progress, and if any bugs are encountered, please refer them to the Gentoo Linux 
+			bugtracking system at http://bugs.gentoo.org.
+			</p>
+		</body>
+	</section>
+	
+</chapter>
+
+<chapter>
+	<title>Upgrading and Installation of Gentoo Linux 2004.3</title>
+	<section>
+		<title>Installing Gentoo Linux 2004.3</title>
+		<body>
+			<p>The entire Gentoo Linux installation process is documented 
+			in the <uri link="http://www.gentoo.org/doc/en/handbook/handbook.xml">Gentoo Handbook</uri>. </p>
+			
+			<p>Each architecture offers three LiveCDs. The first one being a universal
+			bootable LiveCD which can be used to install with or without an Internet connection.
+			The second LiveCD is a non-bootable subarch-optimized Gentoo Reference Platform (GRP)
+			LiveCD which contains precompiled binaries of popular
+			programs such as X.org-x11, KDE, and GNOME. The third LiveCD is a bootable minimal LiveCD
+			that is smaller in size and includes only the basics needed to simply boot a machine.</p>
+			
+			<p>At minimum, the universal or minimal LiveCD is required to boot the machine and install Gentoo.
+			The universal LiveCD requires an Internet connection to install from a stage1
+			installation tarball, but does not require an Internet connection to install
+			from a stage3 installation tarball. The minimal LiveCD requires an Internet connection
+			to install Gentoo Linux.</p>
+
+			<p>The Universal PPC 2004.3 livecd has a Darwin / MacOS X cross compiler on board. The minimal cd
+			is not equipped with this feature. A gcc-3.4.1 linux compiler is also available on the bigger cd. 
+			Distcc is enabled by default.</p>
+
+			<p>Full pegasos support out of the box. Thanks to Freescale Semiconductor and Genesi for donating
+			Open Desktop Workstations. It is no longer required to pass arguments to the pegasos kernel, 
+			the default arguments are compiled into the kernel.</p>
+
+			<p>Just like 2004.2/PPC , this release features a squashfs2 compressed livecd loop filesystem. An
+			X-enabled live DVD/CD with automatic boottime X.org configuration will be available after the 
+			2004.3 release in the /experimental directory on the mirrors and torrents.gentoo.org</p>
+
+			<p>Livecd kernels are 2.6.9 based. ImacG5 support still experimental because of issues with cdrom
+			and thermal management (fans at 100%). The ImacG5 boots to a static shell initrd prompt. The 
+			pending experimental X-enabled live DVD and CD will support this machine completely.</p>
+
+			<p>Because of size constraints, there are only 604, G3, G4, G5 and pegasos compatible kernels on the cd. An experimental livecd for more exotic prep and chrp machines will be available in 
+			the near future. Testers needed (gentoo-ppc-dev@gentoo.org)</p>
+
+			<p>Cascading 2004.3 profile as the default profile and udev as default dev-manager. Completely 
+			revamped toolchain (gcc-3.4.1, glibc 2.3.4 based). The entire ppc portage tree has been tested 
+			and prepared for NPTL, linux26-headers compatibility. NPTL is not enabled by default however, 
+			add NPTL to your use flags for an NPTL enabled PPC toolchain. Please note that a 2.4 kernel 
+			can not boot a userland with an NPTL enabled toolchain.</p>
+
+			<p>Bootsplash can be used on ppc. Not enabled by default on the livecd (yet). emerge bootsplash</p>
+
+			<p>A lot of work was performed on oldworld support, feedback welcome on bugs.gentoo.org.</p>
+
+			<p>The LiveCDs are located on the mirrors as follows: </p>
+			<table>
+				<tr>
+					<th>LiveCD Description</th>
+					<th>Location on Mirrors</th>
+				</tr>
+				<tr>
+					<ti>Universal bootable LiveCD</ti>
+					<ti>/releases/ppc/2004.3/livecd/universal/install-ppc-universal-2004.3.iso</ti>
+				</tr>
+				<tr>
+					<ti>Minimal bootable LiveCD</ti>
+					<ti>/releases/ppc/2004.3/livecd/universal/install-ppc-minimal-2004.3.iso</ti>
+				</tr>
+				<tr>
+					<ti>Non-bootable GRP-/Packages CD</ti>
+					<ti>/releases/ppc/2004.3/packagecd/packages-ppc-2004.3.iso</ti>
+				</tr>
+			</table>
+		</body>
+	</section>
+	<section>
+		<title>Upgrading to Gentoo Linux 2004.3</title>
+		<body>
+			<p>
+			If you already have a working installation of Gentoo Linux (Version
+			1.4, 2004.0, 2004.1) there is no need to reinstall. You will automatically get
+			Gentoo 2004.3 if you sync your Portage tree and run
+			<c>emerge --update world</c>. If you still have an installation
+			with a Gentoo 1.2 profile it might make sense -- in some cases -- 
+			that you do a new installation.</p>
+			<p>
+			There is also the possibility to update your system to a 1.4 
+			profile from which you -- as already stated -- can easily get to
+			Gentoo 2004.3. This update includes recompiling of glibc and some
+			essential system packages; it will take a very long time (possibly
+			longer as a complete re-installation) and it might also fail. So if
+			you still have an installation with a Gentoo 1.2 profile, it's
+			your decision whether you update or reinstall.
+			</p>
+		</body>
+	</section>
+</chapter>
+
+</guide>
