@@ -1,12 +1,16 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/ChangeLog,v 1.8 2004/11/13 23:34:33 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/releng/release/2004.3/ChangeLog,v 1.9 2004/11/14 23:18:50 wolf31o2 Exp $
 
 # This file serves as the official ChangeLog for Gentoo Linux 2004.3
 # Each bugfix, enhancement, etc should be documented in this file
 # The syntax used by 'echangelog' should suffice.
 
 # PLEASE BE THOROUGH IN YOUR EXPLANATIONS!
+
+  14 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
+  Closing bug #58512. Made sure ide-disk was built-in in the kernel
+  configuration.
 
   13 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
   Closing bug #61283.  2.5GHz G5 support was added to the ppc LiveCD.
